--- a/configure.ac
+++ b/configure.ac
@@ -3,6 +3,8 @@ AC_PREREQ(2.59)
 AC_INIT([resolvconf-override], [1.0], [hadess@hadess.net])
 AM_INIT_AUTOMAKE(1.9 dist-xz no-dist-gzip check-news)
 
+AC_CONFIG_MACRO_DIR([m4])
+
 # Enable silent build when available (Automake 1.11)
 m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])
 
